changes on the database to add the new fields on groups and group types. It is still incomplete.